--- a/kmfrontend/src/frontend/components/karas/PlaylistHeader.scss
+++ b/kmfrontend/src/frontend/components/karas/PlaylistHeader.scss
@@ -184,7 +184,7 @@
 	opacity: 0.93;
 	position: absolute;
 	bottom: 0;
-	z-index: 10040;
+	z-index: 10002;
 	display: flex;
 	button {
 		font-size: 0.75em;
